--- a/src/DayDayUp/DayDayUp.csproj
+++ b/src/DayDayUp/DayDayUp.csproj
@@ -106,6 +106,7 @@
     <DefineConstants>TRACE;NETFX_CORE;WINDOWS_UWP</DefineConstants>
     <Optimize>true</Optimize>
     <NoWarn>;2008</NoWarn>
+    <LangVersion>10</LangVersion>
     <DebugType>pdbonly</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <UseVSHostingProcess>false</UseVSHostingProcess>
