--- a/src/DayDayUp/DayDayUp.csproj
+++ b/src/DayDayUp/DayDayUp.csproj
@@ -128,6 +128,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Core\Settings\SettingsProvider.cs" />
+    <Compile Include="Core\Settings\PredefinedSettings.cs" />
+    <Compile Include="Core\Settings\SettingChangedEventArgs.cs" />
     <Compile Include="UI\Controls\ExpandableSettingControl.xaml.cs">
       <DependentUpon>ExpandableSettingControl.xaml</DependentUpon>
     </Compile>
@@ -145,9 +148,8 @@
     <Compile Include="UI\Converters\StatusToStringConverter.cs" />
     <Compile Include="Helpers\LanguageDefinition.cs" />
     <Compile Include="Helpers\ResourceExtensions.cs" />
-    <Compile Include="Helpers\SettingsHelper.cs" />
-    <Compile Include="Helpers\ThemeSelectorHelper.cs" />
-    <Compile Include="Helpers\TodoManagementHelper.cs" />
+    <Compile Include="Services\ThemeSelector.cs" />
+    <Compile Include="Services\TodoManager.cs" />
     <Compile Include="Models\Todo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DataAccess.cs" />
@@ -329,6 +331,9 @@
     </PackageReference>
     <PackageReference Include="Nito.AsyncEx">
       <Version>5.1.2</Version>
+    </PackageReference>
+    <PackageReference Include="System.Composition.AttributedModel">
+      <Version>6.0.0</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
