--- a/src/DayDayUp/DayDayUp.csproj
+++ b/src/DayDayUp/DayDayUp.csproj
@@ -131,6 +131,11 @@
     <Compile Include="Core\Settings\SettingsProvider.cs" />
     <Compile Include="Core\Settings\PredefinedSettings.cs" />
     <Compile Include="Core\Settings\SettingChangedEventArgs.cs" />
+    <Compile Include="Services\LanguageManagerAuto.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>LanguageManagerAuto.tt</DependentUpon>
+    </Compile>
     <Compile Include="UI\Controls\ExpandableSettingControl.xaml.cs">
       <DependentUpon>ExpandableSettingControl.xaml</DependentUpon>
     </Compile>
@@ -153,17 +158,13 @@
     <Compile Include="Models\Todo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\DataAccess.cs" />
-    <Compile Include="Services\LanguageManager.cs" />
     <Compile Include="ViewModels\ArchivePageViewModel.cs" />
     <Compile Include="ViewModels\BaseTodoListViewModel.cs" />
-    <Compile Include="ViewModels\DashboardPageViewModel.cs" />
     <Compile Include="ViewModels\HomePageViewModel.cs" />
+    <Compile Include="ViewModels\MainPageViewModel.cs" />
     <Compile Include="ViewModels\SettingsPageViewModel.cs" />
     <Compile Include="Views\ArchivePage.xaml.cs">
       <DependentUpon>ArchivePage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\DashboardPage.xaml.cs">
-      <DependentUpon>DashboardPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\DurationPredictionPage.xaml.cs">
       <DependentUpon>DurationPredictionPage.xaml</DependentUpon>
@@ -251,6 +252,10 @@
     <Content Include="Assets\Square44x44Logo.scale-200.png" />
     <Content Include="Assets\Square44x44Logo.targetsize-24_altform-unplated.png" />
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
+    <Content Include="Services\LanguageManagerAuto.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>LanguageManagerAuto.cs</LastGenOutput>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -276,10 +281,6 @@
     <Page Include="Views\ArchivePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\DashboardPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\DurationPredictionPage.xaml">
       <SubType>Designer</SubType>
@@ -347,6 +348,24 @@
   </ItemGroup>
   <ItemGroup>
     <PRIResource Include="Strings\zh-cn\SettingsPage.resw" />
+  </ItemGroup>
+  <ItemGroup>
+    <PRIResource Include="Strings\en-us\MainPage.resw" />
+  </ItemGroup>
+  <ItemGroup>
+    <PRIResource Include="Strings\zh-cn\MainPage.resw" />
+  </ItemGroup>
+  <ItemGroup>
+    <PRIResource Include="Strings\en-us\ArchivePage.resw" />
+  </ItemGroup>
+  <ItemGroup>
+    <PRIResource Include="Strings\zh-cn\ArchivePage.resw" />
+  </ItemGroup>
+  <ItemGroup>
+    <PRIResource Include="Strings\zh-cn\HomePage.resw" />
+  </ItemGroup>
+  <ItemGroup>
+    <PRIResource Include="Strings\en-us\HomePage.resw" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
