--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,5 +60,6 @@ steps:
     action: 'create'
     target: '$(Build.SourceVersion)'
     tagSource: 'gitTag'
+    tagPattern: 'release-v*.*.*'
     changeLogCompareToRelease: 'lastFullRelease'
     changeLogType: 'commitBased'
