--- a/src/DayDayUp/DayDayUp.csproj
+++ b/src/DayDayUp/DayDayUp.csproj
@@ -19,16 +19,16 @@
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
     <AppxPackageSigningEnabled>True</AppxPackageSigningEnabled>
-    <PackageCertificateThumbprint>2AC37648433C00D51DCF0C986B027F095C8F8982</PackageCertificateThumbprint>
+    <PackageCertificateThumbprint>F3A00D7728FC150E41CFA24511551576F0734E7A</PackageCertificateThumbprint>
     <PackageCertificateKeyFile>
     </PackageCertificateKeyFile>
     <GenerateAppInstallerFile>True</GenerateAppInstallerFile>
     <AppxPackageSigningTimestampDigestAlgorithm>SHA256</AppxPackageSigningTimestampDigestAlgorithm>
-    <AppxAutoIncrementPackageRevision>True</AppxAutoIncrementPackageRevision>
+    <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
     <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
     <GenerateTestArtifacts>True</GenerateTestArtifacts>
-    <AppxBundle>Always</AppxBundle>
-    <AppxBundlePlatforms>x64</AppxBundlePlatforms>
+    <AppxBundle>Never</AppxBundle>
+    <AppxBundlePlatforms>x64|arm|arm64</AppxBundlePlatforms>
     <AppInstallerUri>C:\Users\FangJ\Downloads</AppInstallerUri>
     <HoursBetweenUpdateChecks>0</HoursBetweenUpdateChecks>
   </PropertyGroup>
@@ -381,12 +381,14 @@
     <PRIResource Include="Strings\en-us\HomePage.resw" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="DayDayUp_TemporaryKey.pfx" />
     <PRIResource Include="Strings\template\SettingsPage.resw" />
     <PRIResource Include="Strings\template\MainPage.resw" />
     <PRIResource Include="Strings\template\HomePage.resw" />
     <PRIResource Include="Strings\template\ArchivePage.resw" />
     <PRIResource Include="Strings\zh-cn\Resources.resw" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="DayDayUp_TemporaryKey.pfx" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
